bk_ida/gccida/g1/refers_to_regno_for_reload_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6587:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v20 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v4 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6629:20: error: expected expression
if ( loc != ( rtx *)v4->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6634:20: error: expected expression
if ( loc != ( rtx *)rtx->fld ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6658:20: error: expected expression
if ( loc == ( rtx *)&v4[1] ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6660:12: error: expected ';' after expression
v4 = ( rtx)v4[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6664:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6673:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v4 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6703:14: error: expected expression
v10 = ( rtx *)v4 + v8; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/reload.c:6733:23: error: expected expression
while ( loc == ( rtx *)&( *v10)->fld[v26] 
                      ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/refers_to_regno_for_reload_p/src/obj/reload.o] Error 1
